# electronicPOC

./: .gitignore  README.md  TODO.md  hello.py  iot_news_bot_fixed.py  multi_agent_conceptual_model.md  pyproject.toml  requirements.txt
models/: iot_news_orchestrator.py  parallel_agent.py  query_processor_agent.py  response_models.py  sequential_agent.py
