[project]
name = "electronicpoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk==1.0.0",
    "streamlit==1.32.0",
    "feedparser==6.0.10",
    "google-generativeai==0.3.2",
    "python-dotenv==1.0.0",
    "pydantic==2.11.4"
]
